[gd_scene load_steps=4 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://simpleitemlist/ItemList.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ItemList" parent="." instance=ExtResource( 3 )]
margin_left = 393.397
margin_top = 170.308
margin_right = -438.603
margin_bottom = -109.692

[node name="RamUsage" type="Label" parent="."]
margin_left = 894.284
margin_top = 566.063
margin_right = 999.284
margin_bottom = 586.063
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlinePlayers" type="Label" parent="."]
margin_left = -1.15221
margin_top = 4.11893
margin_right = 466.848
margin_bottom = 85.1189
text = "Il y a 0 joueur connect√©."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CreatedRoom" type="Label" parent="."]
margin_left = 552.947
margin_top = 0.940552
margin_right = 1020.95
margin_bottom = 81.9406
text = "Il y a 0 Room disponible.."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 379.0
margin_top = 116.0
margin_right = 592.0
margin_bottom = 141.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 14.6132
margin_top = 571.826
margin_right = 54.6132
margin_bottom = 585.826
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
